# amacv2_tester

./: .gitignore  .gitlab-ci.yml  README.md
amacv2_testbench_microzed/: amacv2_testbench_microzed.xpr
amacv2_testbench_microzed/amacv2_testbench_microzed.sdk/: TopLevel_wrapper.hdf
analysis/: AMACReport.ipynb  QuickAnalysis.ipynb  report.py
analysis/data/: AMACREF3_BANDGAP.csv  AMACREF3_Power.csv  AMACREF3_VADC_CAL.csv  AMACREF3_VADC_Hrefx.csv  AMACREF3_VADC_Hrefy.csv  AMACREF3_VADC_PTAT.csv
doc/: README.md
doc/BOM/: bom_errata.txt  (+1 more)
software/: CMakeLists.txt  README.md
software/src/: CMakeLists.txt
software/src/amac/: AMAC.cpp  AMAC.h  AMACTB.cpp  AMACTB.h  AMACTest.cpp  AMACTest.h  AMACreg.cpp  AMACreg.h  CMakeLists.txt
software/src/devcom/: AD5160.cpp  AD5160.h  ADCDevice.cpp  ADCDevice.h  CMakeLists.txt  ClimateSensor.h  DACDevice.cpp  DACDevice.h  DeviceCom.h  EndeavourCom.cpp  EndeavourCom.h  EndeavourRaw.cpp  FreqMeas.cpp  FreqMeas.h  LTC2333.cpp  LTC2333.h  LTC2666.cpp  LTC2666.h  SPICom.cpp  SPICom.h  UIOCom.h
software/src/play/: bme280_monitor.cpp
software/src/tests/: AMACBandgapScan.cpp  AMACDumpRegisters.cpp  AMACTurnOn.cpp  AMACVoltageADC.cpp  AMACZeroCalib.cpp  CMakeLists.txt  CurrentMeas.cpp  DigitalIOTest.cpp  EndeavourBER.cpp  EndeavourSetIDTest.cpp  FreqMeas.cpp  HVOscFreq.cpp  InitialTests.cpp  VDD_DAC.cpp  interactiveReadWrites.cpp
software/src/tools/: CMakeLists.txt  DigitalIOTest.cpp  FreqMeasTest.cpp  endeavour.cpp  ltc2333test.cpp  ltc2666test.cpp  potTest.cpp  powerOff.cpp  powerOn.cpp  resetB.cpp  spitest.cpp
(+272 files in other folders)
