CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(amacv2_tester)

# The version number.
SET(amac_VERSION_MAJOR 0)
SET(amac_VERSION_MINOR 1)

# Nicer structure for binary files
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# C++11
SET(CMAKE_CXX_STANDARD 14)

# Source code
ADD_SUBDIRECTORY(src)
